Bug fix where filter was too big at 320px - 334px viewports

--- a/src/styles/services-view.less
+++ b/src/styles/services-view.less
@@ -132,7 +132,9 @@ services-view,
 
       .form-group {
         margin-bottom: 0;
-        margin-right: (@grid-gutter-width / 2);
+        @media(min-width: 335px) {
+          margin-right: (@grid-gutter-width / 2);
+        }
       }
     }
 
